--- a/.github/workflows/check_files.yml
+++ b/.github/workflows/check_files.yml
@@ -7,37 +7,51 @@ on:
 jobs:
   check_files:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Check .gitignore and added files
-      id: check_gitignore
-      run: |
-        # Check if .gitignore contains enemies_shooting.py
-        if grep -q "enemies_shooting.py" .gitignore; then
-          echo "Found enemies_shooting.py in .gitignore"
-        else
-          echo "❌ enemies_shooting.py not found in .gitignore"
-          exit 1
-        fi
+      - name: Check .gitignore and added files
+        id: check_gitignore
+        run: |
+          # Check if .gitignore contains enemies_shooting.py
+          if grep -q "enemies_shooting.py" .gitignore; then
+            echo "Found enemies_shooting.py in .gitignore"
+          else
+            echo "❌ enemies_shooting.py not found in .gitignore"
+            exit 1
+          fi
 
-        # Get the list of added files in the pull request
-        echo "Checking added files..."
-        git fetch origin ${{ github.event.pull_request.base.ref }}
-        added_files=$(git diff --name-status origin/${{ github.event.pull_request.base.ref }}..HEAD | grep '^A' | awk '{print $2}')
-        
-        # Check if batwing.txt is among the added files
-        if echo "$added_files" | grep -q "batwing.txt"; then
-          echo "✅ batwing.txt found in added files!"
-          echo "::set-output name=status::success"
-        else
-          echo "❌ batwing.txt not found in added files."
-          exit 1
-        fi
+          # Get the list of added files in the pull request
+          echo "Checking added files..."
+          git fetch origin ${{ github.event.pull_request.base.ref }}
+          added_files=$(git diff --name-status origin/${{ github.event.pull_request.base.ref }}..HEAD | grep '^A' | awk '{print $2}')
+          
+          # Check if batwing.txt is among the added files
+          if echo "$added_files" | grep -q "batwing.txt"; then
+            echo "✅ batwing.txt found in added files!"
+            echo "::set-output name=status::success"
+          else
+            echo "❌ batwing.txt not found in added files."
+            exit 1
+          fi
 
-    - name: Congratulations
-      if: steps.check_gitignore.outputs.status == 'success'
-      run: |
-        echo "🎉 Congratulations! Your pull request meets the requirements!"
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get install gh
+
+      - name: Congratulations
+        if: steps.check_gitignore.outputs.status == 'success'
+        run: |
+          echo "🎉 Congratulations! Your pull request meets the requirements!"
+
+          # Prepare the comment message using a single multi-line string
+          COMMENT="## 🎊 Congratulations, Hero! 🎊\n\n\
+          You helped **Batman** escape! 🦸‍♂️💨\n\n\
+          ### Mission Accomplished!\n\
+          Batman reaches the remote from the **courier room of the lounge**! 🏢✈️\n\n\
+          Thank you for your heroic contribution! Keep up the great work! 🚀"
+
+          # Comment on the pull request using GitHub CLI
+          echo -e "$COMMENT" | gh pr comment ${{ github.event.pull_request.number }} --body -
