--- a/.github/workflows/check_files.yml
+++ b/.github/workflows/check_files.yml
@@ -43,6 +43,8 @@ jobs:
 
       - name: Congratulations
         if: steps.check_gitignore.outputs.status == 'success'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Add this line for authentication
         run: |
           echo "🎉 Congratulations! Your pull request meets the requirements!"
 
