--- a/.github/workflows/check_files.yml
+++ b/.github/workflows/check_files.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+permissions:
+  pull-requests: write
+  
 jobs:
   check_files:
     runs-on: ubuntu-latest
