--- a/.github/workflows/check_files.yml
+++ b/.github/workflows/check_files.yml
@@ -5,8 +5,8 @@ on:
     types: [opened, synchronize]
 
 permissions:
-  pull-requests: write
-  
+  pull-requests: write  # Grant write access to pull requests
+
 jobs:
   check_files:
     runs-on: ubuntu-latest
@@ -23,6 +23,7 @@ jobs:
             echo "Found enemies_shooting.py in .gitignore"
           else
             echo "❌ enemies_shooting.py not found in .gitignore"
+            echo "::set-output name=status::failure"
             exit 1
           fi
 
@@ -31,32 +32,28 @@ jobs:
           git fetch origin ${{ github.event.pull_request.base.ref }}
           added_files=$(git diff --name-status origin/${{ github.event.pull_request.base.ref }}..HEAD | grep '^A' | awk '{print $2}')
           
-          # Check if batwing.txt is among the added files
-          if echo "$added_files" | grep -q "batwing.txt"; then
-            echo "✅ batwing.txt found in added files!"
-            echo "::set-output name=status::success"
-          else
-            echo "❌ batwing.txt not found in added files."
+          # Check if enemies_shooting.py is among the added files
+          if echo "$added_files" | grep -q "enemies_shooting.py"; then
+            echo "❌ enemies_shooting.py found in added files."
+            echo "::set-output name=status::failure"
             exit 1
+          else
+            echo "✅ enemies_shooting.py not found in added files!"
+            echo "::set-output name=status::success"
           fi
 
-      - name: Install GitHub CLI
-        run: |
-          sudo apt-get install gh
-
-      - name: Congratulations
-        if: steps.check_gitignore.outputs.status == 'success'
+      - name: Comment on Pull Request
+        if: steps.check_gitignore.outputs.status == 'success'  # Comment only if checks passed
+        uses: mshick/add-pr-comment@v2
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Add this line for authentication
-        run: |
-          echo "🎉 Congratulations! Your pull request meets the requirements!"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Explicitly set the GitHub token
+        with:
+          message: |
+            ## 🎊 Congratulations, Hero! 🎊
 
-          # Prepare the comment message using a single multi-line string
-          COMMENT="## 🎊 Congratulations, Hero! 🎊\n\n\
-          You helped **Batman** escape! 🦸‍♂️💨\n\n\
-          ### Mission Accomplished!\n\
-          Batman reaches the remote from the **courier room of the lounge**! 🏢✈️\n\n\
-          Thank you for your heroic contribution! Keep up the great work! 🚀"
+            You helped **Batman** escape! 🦸‍♂️💨
 
-          # Comment on the pull request using GitHub CLI
-          echo -e "$COMMENT" | gh pr comment ${{ github.event.pull_request.number }} --body -
+            ### Mission Accomplished!
+            Batman reaches the remote from the **courier room of the lounge**! 🏢✈️
+
+            Thank you for your heroic contribution! Keep up the great work! 🚀
