updated workflow to comment proper clue

--- a/.github/workflows/check_files.yml
+++ b/.github/workflows/check_files.yml
@@ -51,9 +51,7 @@ jobs:
           message: |
             ## 🎊 Congratulations, Hero! 🎊
 
-            You helped **Batman** escape! 🦸‍♂️💨
-
-            ### Mission Accomplished!
-            Batman reaches the remote from the **courier room of the lounge**! 🏢✈️
+          
+            Batman reaches the remote from the **🟢 *courier room of the lounge* 🟢**! 🏢✈️
 
             Thank you for your heroic contribution! Keep up the great work! 🚀
